--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "boilerplate",
+  "name": "3.4-to-do-list",
   "version": "1.0.0",
-  "description": "boilerplate for FEE spring class",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "watch-sass": "sass --watch sass/main.sass:styles/main.css",
-    "watch-js": "watchify js/main.js -o js/bundle.js -v",
-    "watch": "npm run watch-sass & npm run watch-js"
+    "watch": "sass --watch sass/main.sass:styles/main.css"
   },
   "dependencies": {
-    "jquery": "^2.2.3"
+    "jquery": "^1.12.3"
   }
 }
